Code quality fixings